2011-03-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.0
	* Version 1.5.0 released

2011-03-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator splitparam - Split parameter identifiers

2011-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator selparam - Select parameters by identifier
	* Added operator delparam - Delete parameters by identifier
	* sinfo: changed output of table and code number to parameter identifier
	* info:  changed output of code number to parameter identifier
	* diff:  changed output of code number to parameter identifier

2011-03-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setgrid: added parameter: dereference
	* cdo: added option -O to overwrite existing output file [request: Chris Fletscher]

2011-03-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* fldmean: check range of lon/lat bounds [report: Jonas Bhend]
	* ml2pl: wrong result if input file contains full and half level data (bug fix) [report: Jaison Ambadan]

2011-03-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridToCell(GME): set X/Y units to degrees_east/degrees_north [report: Patrick Brockmann]

2011-03-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* expr: added functions abs(), int(), nint(), sqr()
	
2011-02-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbil: fix pole problem with gr15_psi grids [report: Karoline Block]

2011-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* renamed function var to expr_var [report: Jed Kaplan]
	
2011-01-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* splitcode: added support for code numbers > 999
	
2011-01-21  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * changed grid name GRID_CELL to GRID_UNSTRUCTURED

2011-01-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* spcut: only correct results with continuous wave numbers starting at 1 (bug fix)
	
2011-01-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
