@@ -111,6 +111,7 @@ Operator catalog:
 -------------------------------------------------------------
    Set           setpartab       Set parameter table
    Set           setcode         Set code number
+   Set           setparam        Set parameter identifier
    Set           setname         Set variable name
    Set           setlevel        Set level
    Set           setltype        Set GRIB level type
