@@ -669,18 +669,19 @@ static char *CompcHelp[] = {
 
 static char *SetHelp[] = {
     "NAME",
-    "    setpartab, setcode, setname, setlevel, setltype - Set field info",
+    "    setpartab, setcode, setparam, setname, setlevel, setltype - Set field info",
     "",
     "SYNOPSIS",
     "    setpartab,table  ifile ofile",
     "    setcode,code  ifile ofile",
+    "    setparam,param  ifile ofile",
     "    setname,name  ifile ofile",
     "    setlevel,level  ifile ofile",
     "    setltype,ltype  ifile ofile",
     "",
     "DESCRIPTION",
     "    This module sets some field information. Depending on the chosen",
-    "    operator the parameter table, code number, variable name or",
+    "    operator the parameter table, code number, parameter identifier, variable name or",
     "    level is set.",
     "",
     "OPERATORS",
@@ -688,6 +689,8 @@ static char *SetHelp[] = {
     "               Sets the parameter table for all variables.",
     "    setcode    Set code number",
     "               Sets the code number for all variables to the same given value.",
+    "    setparam   Set parameter identifier",
+    "               Sets the parameter identifier of the first variable.",
     "    setname    Set variable name",
     "               Sets the name of the first variable.",
     "    setlevel   Set level",
@@ -698,6 +701,7 @@ static char *SetHelp[] = {
     "PARAMETER",
     "    table  STRING   Parameter table file or name",
     "    code   INTEGER  Code number",
+    "    param  STRING  Parameter identifier (format: code[.tabnum] or num[.cat[.dis]])",
     "    name   STRING   Variable name",
     "    level  FLOAT    New level",
     "    ltype  INTEGER  GRIB level type",
