@@ -5,6 +5,7 @@
 
 2011-03-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
+	* Added operator setparam - Set parameter identifiers
 	* Added operator splitparam - Split parameter identifiers
 
 2011-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
